[package]
name = "scylla-python-driver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scylla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
pyo3-asyncio = {version = "0.16", features = ["tokio-runtime"] }
lazy_static = "1.4"
scylla = "0.4"
